--- a/src/main/resources/static/app/assets/sass/lbd/_typography.scss
+++ b/src/main/resources/static/app/assets/sass/lbd/_typography.scss
@@ -1,18 +1,18 @@
 /*           Font Smoothing      */
 body,
-h1, .h1, 
-h2, .h2, 
-h3, .h3, 
-h4, .h4, 
-h5, .h5, 
-h6, .h6, 
-p, 
-.navbar, 
-.brand, 
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6,
+p,
+.navbar,
+.brand,
 .btn-simple,
-.alert, 
-a, 
-.td-name, 
+.alert,
+a,
+.td-name,
 td,
 button.close{
     -moz-osx-font-smoothing: grayscale;
@@ -35,6 +35,7 @@ h2, .h2{
 h3, .h3{
     font-size: $font-size-h3;
     margin: 20px 0 10px;
+    color: #00b3ee;
 }
 h4, .h4{
     font-size: $font-size-h4;
@@ -66,7 +67,7 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 
 h1 .subtitle{
     display: block;
-    margin: 0 0 $margin-large-vertical;   
+    margin: 0 0 $margin-large-vertical;
 }
 
 .text-muted{
@@ -88,3 +89,6 @@ h1 .subtitle{
     color: $danger-color !important;
 }
 
+.detail{
+    color: $danger-color !important;
+}
