--- a/src/main/resources/static/app/views/yelp.html
+++ b/src/main/resources/static/app/views/yelp.html
@@ -1,11 +1,35 @@
-<div class="row">
-	<div class="col-md-12">
-		<div class="card">
-			<div class="header">
-				<h4 class="title">hello</h4>
-				<p class="category">world</p>
-			</div>
-			<div class="content"></div>
-		</div>
-	</div>
+<div ng-app="app" class = "rows">
+	<div ng-controller="DashboardCtrl">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card">
+          <div class="header">
+            <h4 class="title">Location: {{loc}}</h4>
+            <input type="text" class="form-control" placeholder="Text input" ng-model="loc">
+            <br>
+            <button type="submit" ng-click="sendPost()" class="btn btn-info btn-sm">Send</button>
+            <br>
+
+            <div class="blank">
+            <table class="table table-bordered">
+              <tr>
+                <th>Name</th>
+                <th>Phone</th>
+                <th>Rating</th>
+                <th>Review</th>
+              </tr>
+              <tr ng-repeat="i in businesses">
+                <td><a href="#/app/taskdetail/{{i.id}}">{{i.name}}</a></td>
+                <td>{{i.phone}}</td>
+                <td><img src={{i.rating_img_url}}></td>
+                <td>{{i.snippet_text}}</td>
+              </tr>
+            </table>
+          </div>
+          </div>
+          <div class="content"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
