--- a/src/main/resources/static/app/views/app.html
+++ b/src/main/resources/static/app/views/app.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="sidebar" data-color="azure">
+    <div class="sidebar" data-color="green">
 
     <!--
         Tip 1: you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple"
@@ -8,7 +8,7 @@
     	<div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    CS598 Project
+                    Polaris
                 </a>
             </div>
 
@@ -23,6 +23,12 @@
                     <a ui-sref="app.yelp">
                         <i class="pe-7s-user"></i>
                         <p>Yelp</p>
+                    </a>
+                </li>
+                <li ui-sref-active="active">
+                    <a ui-sref="app.tripadvisor">
+                        <i class="fa fa-tripadvisor"></i>
+                        <p>TripAdvisor</p>
                     </a>
                 </li>
 
