--- a/src/main/resources/static/app/views/app.html
+++ b/src/main/resources/static/app/views/app.html
@@ -21,7 +21,7 @@
                 </li>
                 <li ui-sref-active="active">
                     <a ui-sref="app.yelp">
-                        <i class="pe-7s-user"></i>
+                        <i class="fa fa-yelp"></i>
                         <p>Yelp</p>
                     </a>
                 </li>
@@ -31,7 +31,12 @@
                         <p>TripAdvisor</p>
                     </a>
                 </li>
-
+				<li ui-sref-active="active">
+                    <a ui-sref="">
+                        <i class="fa fa-amazon"></i>
+                        <p>Amazon</p>
+                    </a>
+                </li>
             </ul>
     	</div>
     </div>
