--- a/src/main/resources/static/app/views/taskdetail.html
+++ b/src/main/resources/static/app/views/taskdetail.html
@@ -4,7 +4,10 @@
 			<div class="col-md-9">
 				<div class="card">
 					<div class="header">
-						<h4 class="title"><a href="https://tripadvisor.com{{business.hotelURL}}" target="_blank">{{business.hotelName}}</a></h4>
+						<h4 class="title">
+							<a href="https://tripadvisor.com{{business.hotelURL}}"
+								target="_blank">{{business.hotelName}}</a>
+						</h4>
 						<p class="category">{{business.hotelRanking}}</p>
 					</div>
 					<div class="content">
@@ -20,128 +23,165 @@
 								</tr>
 								<tr>
 									<td>Rating</td>
-									<td>
-											<i class="fa text-success" ng-class="{'fa-star' : business.numBubbles >= 1, 'fa-star-o' : business.numBubbles == 0, 'fa-star-half-o' : business.numBubbles > 0 && business.numBubbles < 1}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.numBubbles >= 2, 'fa-star-o' : business.numBubbles <= 1, 'fa-star-half-o' : business.numBubbles > 1 && business.numBubbles < 2}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.numBubbles >= 3, 'fa-star-o' : business.numBubbles <= 2, 'fa-star-half-o' : business.numBubbles > 2 && business.numBubbles < 3}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.numBubbles >= 4, 'fa-star-o' : business.numBubbles <= 3, 'fa-star-half-o' : business.numBubbles > 3 && business.numBubbles < 4}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.numBubbles >= 5, 'fa-star-o' : business.numBubbles <= 4, 'fa-star-half-o' : business.numBubbles > 4 && business.numBubbles < 5}"></i> 
-										
-							<p class="category text-success">{{business.bubbles}}</p>
-										</td>
+									<td><i class="fa text-success"
+										ng-class="{'fa-star' : business.numBubbles >= 1, 'fa-star-o' : business.numBubbles == 0, 'fa-star-half-o' : business.numBubbles > 0 && business.numBubbles < 1}"></i>
+										<i class="fa text-success"
+										ng-class="{'fa-star' : business.numBubbles >= 2, 'fa-star-o' : business.numBubbles <= 1, 'fa-star-half-o' : business.numBubbles > 1 && business.numBubbles < 2}"></i>
+										<i class="fa text-success"
+										ng-class="{'fa-star' : business.numBubbles >= 3, 'fa-star-o' : business.numBubbles <= 2, 'fa-star-half-o' : business.numBubbles > 2 && business.numBubbles < 3}"></i>
+										<i class="fa text-success"
+										ng-class="{'fa-star' : business.numBubbles >= 4, 'fa-star-o' : business.numBubbles <= 3, 'fa-star-half-o' : business.numBubbles > 3 && business.numBubbles < 4}"></i>
+										<i class="fa text-success"
+										ng-class="{'fa-star' : business.numBubbles >= 5, 'fa-star-o' : business.numBubbles <= 4, 'fa-star-half-o' : business.numBubbles > 4 && business.numBubbles < 5}"></i>
+
+										<p class="category text-success">{{business.bubbles}}</p></td>
 								</tr>
 								<tr>
 									<td>Number of Reviews</td>
 									<td>{{business.numberOfReviews}}</td>
 								</tr>
-								
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<div class="card">
-					<div class="header">
-						<h4 class="title">Top Suspicious Reviews</h4>
-					</div>
-					<div class="content">
-						<table class="table">
-							<thead>
-								<tr>
-									<th>Reviewer</th>
-									<th>Review</th>
-									<th style="text-align:center">Ranking Score</th>
-									<th width="35px" style="text-align:center">Feedback</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>reviewer1</td>
-									<td>
-										<p>
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 1, 'fa-star-o' : business.rating == 0, 'fa-star-half-o' : business.rating > 0 && business.rating < 1}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 2, 'fa-star-o' : business.rating <= 1, 'fa-star-half-o' : business.rating > 1 && business.rating < 2}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 3, 'fa-star-o' : business.rating <= 2, 'fa-star-half-o' : business.rating > 2 && business.rating < 3}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 4, 'fa-star-o' : business.rating <= 3, 'fa-star-half-o' : business.rating > 3 && business.rating < 4}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 5, 'fa-star-o' : business.rating <= 4, 'fa-star-half-o' : business.rating > 4 && business.rating < 5}"></i> 
 
-										</p>
-											This is the review
-									</td>
-									<td align="center">
-									<p class="text-danger">-0.1761</p>
-									<p class="category">Highly Unreliable</p>
-									</td>
-									<td align="center">
-										<button class="btn btn-simple">
-											<i class="fa fa-thumbs-o-up text-success"></i>
-										</button>
-										<button class="btn btn-simple">
-											<i class="fa fa-thumbs-o-down text-danger"></i>
-										</button>
-									</td>								
-								</tr>
-								
 							</tbody>
 						</table>
+						<div class="footer">
+							<hr>
+							<div class="stats">
+								<a class="btn btn-success btn-block btn-fill"
+									ng-click="startAnalyzing()">Start Analyzing!</a>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="card">
-					<div class="header">
-						<h4 class="title">Top Trustful Reviews</h4>
-					</div>
-					<div class="content">
-						<table class="table">
-							<thead>
-								<tr>
-									<th>Reviewer</th>
-									<th>Review</th>
-									<th style="text-align:center">Ranking Score</th>
-									<th width="35px" style="text-align:center">Feedback</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>reviewer1</td>
-									<td>
-										<p>
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 1, 'fa-star-o' : business.rating == 0, 'fa-star-half-o' : business.rating > 0 && business.rating < 1}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 2, 'fa-star-o' : business.rating <= 1, 'fa-star-half-o' : business.rating > 1 && business.rating < 2}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 3, 'fa-star-o' : business.rating <= 2, 'fa-star-half-o' : business.rating > 2 && business.rating < 3}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 4, 'fa-star-o' : business.rating <= 3, 'fa-star-half-o' : business.rating > 3 && business.rating < 4}"></i> 
-											<i class="fa text-success" ng-class="{'fa-star' : business.rating >= 5, 'fa-star-o' : business.rating <= 4, 'fa-star-half-o' : business.rating > 4 && business.rating < 5}"></i> 
-											</p>
-											This is the review
-									</td>
-									<td align="center">
-									<p class="text-success">0.1761</p>
-									<p class="category">Highly Reliable</p>
-									</td>
-									<td align="center">
-										<button class="btn btn-simple">
-											<i class="fa fa-thumbs-o-up text-success"></i>
-										</button>
-										<button class="btn btn-simple">
-											<i class="fa fa-thumbs-o-down text-danger"></i>
-										</button>
-									</td>								
-								</tr>
-								
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<div class="card">
-					<div class="header">
-						<h4 class="title">Topics</h4>
-						<hr>
-					</div>
-					<div class="content">
-						<ng-tag-cloud cloud-width="600" cloud-height="250"
-							cloud-data="data"></ng-tag-cloud>
-						<!-- default height and width is 300px -->
 
+				<div ng-switch="analyzeState">
+					<div ng-switch-default></div>
+					<div ng-switch-when="1">
+						<div class="card">
+							<div class="header">
+								<h4 class="title">Analyzing...Please wait...</h4>
+								<div class="content">
+								<i class="fa fa-spinner fa-pulse fa-3x fa-fw text-success"></i>
+								</div>
+							</div>
+						
+						</div>
+					</div>
+					<div ng-switch-when="2">
+						<div class="card">
+							<div class="header">
+								<h4 class="title">Top Suspicious Reviews</h4>
+							</div>
+							<div class="content">
+								<table class="table">
+									<thead>
+										<tr>
+											<th>Reviewer</th>
+											<th>Review</th>
+											<th style="text-align: center">Ranking Score</th>
+											<th width="35px" style="text-align: center">Feedback</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>reviewer1</td>
+											<td>
+												<p>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 1, 'fa-star-o' : business.rating == 0, 'fa-star-half-o' : business.rating > 0 && business.rating < 1}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 2, 'fa-star-o' : business.rating <= 1, 'fa-star-half-o' : business.rating > 1 && business.rating < 2}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 3, 'fa-star-o' : business.rating <= 2, 'fa-star-half-o' : business.rating > 2 && business.rating < 3}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 4, 'fa-star-o' : business.rating <= 3, 'fa-star-half-o' : business.rating > 3 && business.rating < 4}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 5, 'fa-star-o' : business.rating <= 4, 'fa-star-half-o' : business.rating > 4 && business.rating < 5}"></i>
+
+												</p> This is the review
+											</td>
+											<td align="center">
+												<p class="text-danger">-0.1761</p>
+												<p class="category">Highly Unreliable</p>
+											</td>
+											<td align="center">
+												<button class="btn btn-simple">
+													<i class="fa fa-thumbs-o-up text-success"></i>
+												</button>
+												<button class="btn btn-simple">
+													<i class="fa fa-thumbs-o-down text-danger"></i>
+												</button>
+											</td>
+										</tr>
+
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div class="card">
+							<div class="header">
+								<h4 class="title">Top Trustful Reviews</h4>
+							</div>
+							<div class="content">
+								<table class="table">
+									<thead>
+										<tr>
+											<th>Reviewer</th>
+											<th>Review</th>
+											<th style="text-align: center">Ranking Score</th>
+											<th width="35px" style="text-align: center">Feedback</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>reviewer1</td>
+											<td>
+												<p>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 1, 'fa-star-o' : business.rating == 0, 'fa-star-half-o' : business.rating > 0 && business.rating < 1}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 2, 'fa-star-o' : business.rating <= 1, 'fa-star-half-o' : business.rating > 1 && business.rating < 2}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 3, 'fa-star-o' : business.rating <= 2, 'fa-star-half-o' : business.rating > 2 && business.rating < 3}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 4, 'fa-star-o' : business.rating <= 3, 'fa-star-half-o' : business.rating > 3 && business.rating < 4}"></i>
+													<i class="fa text-success"
+														ng-class="{'fa-star' : business.rating >= 5, 'fa-star-o' : business.rating <= 4, 'fa-star-half-o' : business.rating > 4 && business.rating < 5}"></i>
+												</p> This is the review
+											</td>
+											<td align="center">
+												<p class="text-success">0.1761</p>
+												<p class="category">Highly Reliable</p>
+											</td>
+											<td align="center">
+												<button class="btn btn-simple">
+													<i class="fa fa-thumbs-o-up text-success"></i>
+												</button>
+												<button class="btn btn-simple">
+													<i class="fa fa-thumbs-o-down text-danger"></i>
+												</button>
+											</td>
+										</tr>
+
+									</tbody>
+								</table>
+							</div>
+						</div>
+						<div class="card">
+							<div class="header">
+								<h4 class="title">Topics</h4>
+								<hr>
+							</div>
+							<div class="content">
+								<ng-tag-cloud cloud-width="600" cloud-height="250"
+									cloud-data="data"></ng-tag-cloud>
+								<!-- default height and width is 300px -->
+
+							</div>
+						</div>
 					</div>
 				</div>
+
+
 			</div>
 			<div class="col-md-3">
 				<div class="card">
@@ -153,7 +193,8 @@
 						<div class="grade-rating" ng-class="grade.class">{{grade.grade}}</div>
 						<div class="footer">
 							<hr>
-							<div>Detected {{grade.lowQualityReview}}% low quality reviews</div>
+							<div>Detected {{grade.lowQualityReview}}% low quality
+								reviews</div>
 						</div>
 					</div>
 
