--- a/src/main/resources/static/app/views/dashboard.html
+++ b/src/main/resources/static/app/views/dashboard.html
@@ -2,8 +2,16 @@
 	<div class="col-md-12">
 		<div class="card">
 			<div class="header">
-				<h4 class="title">hello</h4>
-				<p class="category"><a href="http://demos.creative-tim.com/light-bootstrap-dashboard/dashboard" target="_blank">theme documentation</a></p>
+				<h4 class="title">This is a placeholder for future dashboard support. We can put analysis summary here.</h4>
+			</div>
+			<div class="content"></div>
+		</div>
+	</div>
+	<div class="col-md-12">
+		<div class="card">
+			<div class="header">
+				<h4 class="title">Click <a href="#/app/tripadvisor"> here </a> to start analyzing TripAdvisor hotel reviews.</h4>
+				<h5>Note: Since we don't have enough Azure credits to keep the Spark clustering running, we saved some previous analysis reports for demo purposes. </h5>
 			</div>
 			<div class="content"></div>
 		</div>
