--- a/src/main/resources/static/app/views/yelp.html
+++ b/src/main/resources/static/app/views/yelp.html
@@ -1,4 +1,4 @@
-<div ng-app="app" class = "rows">
+<!--  <div ng-app="app" class = "rows">
 	<div ng-controller="DashboardCtrl">
     <div class="row">
       <div class="col-md-12">
@@ -32,4 +32,17 @@
       </div>
     </div>
   </div>
+</div>
+
+ -->
+ 
+ <div class="row ng-scope">
+	<div class="col-md-12">
+		<div class="card">
+			<div class="header">
+				<h4 class="title">This is a placeholder for future Yelp review analysis support</h4>
+			</div>
+			<div class="content"></div>
+		</div>
+	</div>
 </div>
