--- a/src/main/resources/static/app/views/app.html
+++ b/src/main/resources/static/app/views/app.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
 				<li ui-sref-active="active">
-                    <a ui-sref="">
+                    <a ui-sref="app.amazon">
                         <i class="fa fa-amazon"></i>
                         <p>Amazon</p>
                     </a>
